--- a/001-JavaSE/JavaWeb/fruitSaleSystem/web/WEB-INF/pages/fruitList.html
+++ b/001-JavaSE/JavaWeb/fruitSaleSystem/web/WEB-INF/pages/fruitList.html
@@ -6,7 +6,6 @@
     <title>水果库存管理系统</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
 </head>
 <body class="bg-light">
     <!-- 页面标题 -->
@@ -46,12 +45,14 @@
                     -->
                     <tr th:if="${not #lists.isEmpty(session.fruitList)}" th:each="fruit : ${session.fruitList}">
                         <td th:text="${fruit.id}"></td>
-                        <td th:text="${fruit.fname}"></td>
+                        <td >
+                            <a style="text-decoration: none" th:href="@{editFruit(id=${fruit.id})}" th:text="${fruit.fname}"></a>
+                        </td>
                         <td th:text="${fruit.price}"></td>
                         <td th:text="${fruit.count}"></td>
                         <td>
                             <!-- 删除按钮 -->
-                            <a th:href="@{/fruit/delete(id=${fruit.id})}"
+                            <a th:href="@{/delFruit(id=${fruit.id})}"
                                class="btn btn-danger btn-sm"
                                onclick="return confirm('确定要删除这个水果吗？');">删除</a>
                         </td>
