--- a/001-JavaSE/JavaWeb/fruitSaleSystem/web/WEB-INF/pages/editFruit.html
+++ b/001-JavaSE/JavaWeb/fruitSaleSystem/web/WEB-INF/pages/editFruit.html
@@ -40,7 +40,7 @@
 <body>
 <h2>编辑水果</h2>
 
-<form th:action="@{/updateFruit}" method="post" th:object="${fruit}">
+<form th:action="@{/fruit.do(oper='update')}" method="post" th:object="${fruit}">
   <!-- 隐藏id -->
   <input type="hidden" name="id" th:value="*{id}">
 
@@ -49,7 +49,7 @@
   <br>
 
   <label>价格：</label>
-  <input type="number" name="price" th:value="*{price}" step="0.1" required>
+  <input type="number" name="price" th:value="*{price}" step="0.01" required>
   <br>
 
   <label>库存数量：</label>
@@ -61,8 +61,16 @@
   <br>
 
   <button type="submit">保存修改</button>
-  <button type="submit">取消</button>
+  <button onclick="handleJumpList()" type="button">取消</button>
 </form>
+  <script>
+    function handleJumpList(){
+      // 方式1：直接跳转到某个页面
+      window.location.href = '/fruit/fruit.do'; // 改成你的列表页路径
 
+      // 方式2：如果你使用的是后端路由，比如 Spring Boot 的 /fruit/list
+      // window.location.href = '/fruit/list';
+    }
+  </script>
 </body>
 </html>
