--- a/001-JavaSE/JavaWeb/BookStore/web/WEB-INF/pages/user/login.html
+++ b/001-JavaSE/JavaWeb/BookStore/web/WEB-INF/pages/user/login.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="UTF-8" />
-    <title>尚硅谷会员登录页面</title>
+    <title>会员登录页面</title>
     <link type="text/css" rel="stylesheet" th:href="@{/static/css/style.css}" />
   </head>
   <body>
@@ -21,7 +21,7 @@
         <div class="login_form">
           <div class="login_box">
             <div class="tit">
-              <h1>尚硅谷会员</h1>
+              <h1>会员</h1>
             </div>
             <div class="msg_cont">
               <b></b>
