✨ 更新到结算阶段

--- a/001-JavaSE/JavaWeb/BookStore/web/WEB-INF/pages/index.html
+++ b/001-JavaSE/JavaWeb/BookStore/web/WEB-INF/pages/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" th:href="@{/static/css/swiper.min.css}" />
     <script type="text/javascript">
       function addToCart(id){
-        window.location.href="cart.do?oper=addToCart&id="+id;
+        window.location.href="cart.do?oper=addToCart&bookId="+id;
       }
     </script>
   </head>
